--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+.app__containerData{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 700px;
+  padding: 30px;
+  gap: 30px;
+}
+
+.app__data > img {
+  width: 200px;
+  box-shadow: 4px 2px 7px 7px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+.app__data > h2{
   text-align: center;
+  margin-bottom: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app__button {
+  padding: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app__button > button{
+  background-color: blue;
+  color: white;
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 4px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app__modal > h2{
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.app__modal > form{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.app__modal > form > input{
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app__data {
+  display: flex;
+  flex-direction: column;
+}
+
+.app__data > button{
+  margin-top: 10px;
+  cursor: pointer;
 }
